--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 Body {
     background-color: rgba(224, 221, 218, 0.468);
-    background-image: url(https://images.pexels.com/photos/2911529/pexels-photo-2911529.jpeg);
+    background-image: url(https://images.pexels.com/photos/24405942/pexels-photo-24405942/free-photo-of-abstract-purple-shapes-on-sky.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-size: cover;
     background-position: center;
 }
@@ -14,14 +14,17 @@ header {
   text-align: center;
   color: #f2eff5;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  border: #979595c5;
-  border-style: double;
+  border: #f2f0f0c5;
+  border-style: dotted;
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
   font-size: 25pt;
-  
-}
+  }
+
 nav {
   display: flex;
-  background-color: #082f56;
+  background-color: #c878cea1;
+  opacity: .5;
   color:rgb(255, 255, 255);
   font-family: monaco;
   font-size: 15pt;
@@ -33,10 +36,10 @@ nav {
   }
 
   .light-bulb {
-    height: 400px;
+    height: 200px;
     width: 100%;
     margin-bottom: 5px;
-    background-image: url();
+    background-image: url(https://images.pexels.com/photos/3872166/pexels-photo-3872166.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-size: cover;
     background-position: center;
     
@@ -94,7 +97,7 @@ img {
   font-size: 20pt;
   color:aliceblue;
   background-color: #082f56;
-  opacity: .9;
+  opacity: .5;
 }
 
 .footer h2 {
@@ -106,6 +109,8 @@ img {
 a:link {
   color: pink;
 }
+a:visited {
+  color: rgb(246, 235, 247);
 
 a:hover {
   color: hotpink;
